# claudepod

./: .gitignore  Cargo.toml  LICENSE  README.md  claudepod.toml  claudepod.toml.old  flake.nix  result
examples/: minimal.toml
src/: config.rs  docker.rs  error.rs  generator.rs  lock.rs  main.rs  marker.rs  paths.rs  profile.rs  state.rs  storage.rs
src/.claudepod/: Dockerfile  entrypoint.sh
templates/: Dockerfile.tera  entrypoint.sh.tera
